--- a/_includes/header.html
+++ b/_includes/header.html
@@ -93,7 +93,7 @@
           </ul>
         </li>
       {% else %}
-        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
+        <li><a href="{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
       {% endif %}
     {% endfor %}
   </ul>
