2019-03-10 FIRE-3 & code block line numbering

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,7 +19,7 @@ sitemap: false
 @import "vendor/magnific-popup/magnific-popup";
 @import "site";
 @import "typography";
-@import "rouge";
+@import "nimbus-pygments";
 @import "coderay";
 @import "grid";
 @import "elements";
