--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,10 @@
+
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<link href="/assets/css/syntax.css" rel="stylesheet" >
+
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript">window.jQuery || document.write('<script type="text/javascript" src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script type="text/javascript" src="{{ site.url }}/assets/js/scripts.min.js"></script>
